[package]
name = "instances-rs"
version = "0.1.0"
authors = [
    "José Almada <jose.almada@outlook.com>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/josealmada/instances-rs"
description = """TODO"""
categories = []
keywords = []
edition = "2021"

[dependencies]
thiserror = "1.0.30"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
crossbeam-channel = "0.5.2"
tracing = "0.1"

[dev-dependencies]
mockall = "0.11.0"
tracing-test = "0.1"

[features]
backend-mysql = []
backend-dynamodb = []
backend-redis = []
backend-all = ["backend-mysql", "backend-dynamodb", "backend-redis"]
default = ["backend-all"]
